# fs-eval

./: .gitignore  README.md  pyproject.toml
fs_eval/: datasets_map.py  evaluator.py  prompt_builder.py  sampler.py
fs_eval/data/cot/: compute-eval.jsonl  humaneval.jsonl  kernelbench.jsonl  leetcode.jsonl  verilog_eval_v1-human.jsonl  verilog_eval_v1-machine.jsonl
fs_eval/data/direct/: KernelBench-level_1.jsonl  KernelBench-level_2.jsonl  KernelBench-level_3.jsonl  KernelBench-level_4.jsonl  compute_eval.jsonl  humaneval.jsonl  lcb.jsonl  rtllm-v1.1.jsonl  rtllm-v2.jsonl  verilogeval-v1-human.jsonl  verilogeval-v1-machine.jsonl  verilogeval-v2-code-complete-iccad2023.jsonl  verilogeval-v2-spec-to-rtl.jsonl
fs_eval/preprocess/: prep_compute_eval.py  prep_humaneval.py  prep_kernelbench.py  prep_lcb.py  prep_rtllm.py  prep_verilogeval-v1.py  prep_verilogeval-v2.py
fs_eval/prompts/: compute_eval.py  examples.py  humaneval.py  kernelbench.jinja  kernelbench.py  verilog_eval.py
fs_eval/prompts/hardware/: gpu_specs.py
fs_eval/testbench/LeetCodeDataset/: setup.py
fs_eval/testbench/RTLLM_v1.1/: auto_run_20.py  change_txt2excel.py  get_rtllm_file.py
fs_eval/testbench/RTLLM_v2.0/: auto_run.py  makefile_dirs.txt  rtllm2.jsonl
fs_eval/testbench/VerilogEval_v1.0.0/: merge_desc_task.py  pyproject.toml  setup.py
fs_eval/testbench/VerilogEval_v2.0.0/: Makefile.in  calc_pass_k.py  complete-iccad2023_0shot_n1.jsonl  complete-iccad2023_1shot_n1.jsonl  gloden_code-complete.jsonl  (+2 more)
fs_eval/uinfer/: engine.py
fs_eval/utils/: io.py  parse_parquet.py  regex.py
(+147 files in other folders)
